[tool.poetry]
name = "dib3-utils"
version = "0.1.0"
description = "Biblioteca com ferramentas úteis para cálculos com contratos de depósitos interbancários (DI) da B3."
authors = ["renanmoretto <himynameisrenan@outlook.com>"]
readme = "README.md"
packages = [{include = "dib3_utils"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "single"
